--- a/term/fish.org
+++ b/term/fish.org
@@ -97,6 +97,11 @@
    #+BEGIN_SRC sh
      zoxide init fish | source
    #+END_SRC
+
+   Use =atuin=
+   #+BEGIN_SRC sh
+     atuin init fish --disable-up-arrow | source
+   #+END_SRC
 ** Colors
    #+BEGIN_SRC sh
      set -g fish_color_autosuggestion brblack
